few tests - incomplete/dmesg-warn/dmesg-fail - TLB invalidation fence timeout
<7> [502.098379] xe 0000:03:00.0: [drm:drm_helper_probe_single_connector_modes [drm_kms_helper]] Probed mode: "640x480": 60 25200 640 656 752 800 480 490 492 525 0x40 0xa
<7> [502.098386] xe 0000:03:00.0: [drm:drm_helper_probe_single_connector_modes [drm_kms_helper]] Probed mode: "640x480": 60 25175 640 656 752 800 480 490 492 525 0x40 0xa
<7> [502.098416] xe 0000:03:00.0: [drm:drm_helper_probe_single_connector_modes [drm_kms_helper]] [CONNECTOR:276:DP-3]
<7> [502.098423] xe 0000:03:00.0: [drm:intel_dp_detect [xe]] [CONNECTOR:276:DP-3]
<7> [502.105854] xe 0000:03:00.0: [drm:drm_helper_probe_single_connector_modes [drm_kms_helper]] [CONNECTOR:276:DP-3] disconnected
<7> [502.105871] xe 0000:03:00.0: [drm:drm_helper_probe_single_connector_modes [drm_kms_helper]] [CONNECTOR:284:HDMI-A-4]
<7> [502.105879] xe 0000:03:00.0: [drm:intel_hdmi_detect [xe]] [CONNECTOR:284:HDMI-A-4]
<7> [502.113854] xe 0000:03:00.0: [drm:drm_helper_probe_single_connector_modes [drm_kms_helper]] [CONNECTOR:284:HDMI-A-4] disconnected
<6> [502.114279] [IGT] kms_atomic_transition: starting subtest modeset-transition-nonblocking-fencing
<6> [502.114440] [IGT] kms_atomic_transition: starting dynamic subtest 1x-outputs
<3> [504.435915] xe 0000:03:00.0: [drm] *ERROR* GT0: TLB invalidation fence timeout, seqno=148 recv=147
<3> [506.738088] xe 0000:03:00.0: [drm] *ERROR* GT1: TLB invalidation fence timeout, seqno=125 recv=124
<3> [509.042072] xe 0000:03:00.0: [drm] *ERROR* GT0: TLB invalidation fence timeout, seqno=149 recv=147
<3> [511.346107] xe 0000:03:00.0: [drm] *ERROR* GT1: TLB invalidation fence timeout, seqno=126 recv=124